# texform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOP.md  README.md  RELEASING.md  TESTING.md  package.json  pyproject.toml  release-plz.toml  renovate.json
crates/texform/: Cargo.toml  README.md
crates/texform-argspec/: Cargo.toml  README.md
crates/texform-argspec/src/: lib.rs
crates/texform-argspec/tests/: parser.rs
crates/texform-bench/: Cargo.toml
crates/texform-bench/benches/: parse_corpus.rs
crates/texform-bench/src/: config.rs  data.rs  dump.rs  lib.rs  output.rs  runner.rs  stats.rs
crates/texform-core/: Cargo.toml  README.md  build.rs
crates/texform-core/examples/: parse.rs  parse_once_with_spec.rs  parse_with_argspec.rs  simple_parser_cli.rs  validate_argspec.rs  validate_spec.rs
crates/texform-core/src/: api.rs  ast.rs  column_parser.rs  context.rs  dimension.rs  document.rs  knowledge.rs  lexer.rs  lib.rs  parser.rs  parser_arguments.rs  parser_utils.rs  serialize.rs  target_counter.rs
crates/texform-core/src/knowledge/: tests.rs
crates/texform-core/src/parse/: arguments.rs  config.rs  context.rs  grammar.rs  mod.rs  state.rs
crates/texform-core/src/transform/: compile.rs  config.rs  context.rs  engine.rs  helpers.rs  macro_support.rs  macros.rs  mod.rs  registry.rs  rule.rs  rule_context.rs
crates/texform-core/src/transform/lower_attributes/: codegen.rs  mod.rs
crates/texform-core/src/transform/lower_declarative/: codegen.rs  data.yaml  mod.rs
crates/texform-core/src/transform/rules/: README.md  mod.rs  over_to_frac.rs  quantity_to_qty.rs  trace_to_tr.rs
crates/texform-core/src/transform/rules/ams/equiv/fenced_matrix_env/: Bmatrix_env_to_brace_matrix.rs  bmatrix_env_to_bracket_matrix.rs  helpers.rs  pmatrix_env_to_paren_matrix.rs  vmatrix_env_to_vert_matrix.rs
crates/texform-core/src/transform/rules/ams/expand/ams-operator-alias/: implies_to_Longrightarrow.rs
crates/texform-core/src/transform/rules/ams/expand/ams_operator_alias/: implies_to_Longrightarrow.rs
crates/texform-core/src/transform/rules/ams/expand/character_normalize/: Join_to_bowtie.rs  centerdot_to_cdot.rs  doublecup_to_Cup.rs  leadsto_to_rightsquigarrow.rs  lozenge_to_Diamond.rs  restriction_to_upharpoonright.rs  square_to_Box.rs  (+1 more)
crates/texform-core/src/transform/rules/desugar/over_family/: over_to_frac.rs
crates/texform-core/src/transform/rules/physics/quantity_alias/: quantity_to_qty.rs
crates/texform-core/src/transform/rules/physics/trace_alias/: trace_to_tr.rs
crates/texform-core/tests/: api.rs  ast.rs  ast_conversion.rs  column_parser.rs  context.rs  lexer.rs  lower_attributes_phase.rs  lower_declarative_phase.rs  node_spans.rs  parse_context.rs  parse_context_builder.rs  parse_context_lookup.rs  parse_context_modes.rs  parse_context_packages.rs  parser.rs  parser_argument_forms.rs  parser_arguments.rs  parser_basic.rs  parser_builder.rs  parser_column_arg.rs  parser_context_isolation.rs  parser_diagnostics.rs  parser_linebreak.rs  parser_lookup.rs  parser_packages.rs  parser_prime.rs  parser_reparse.rs  serializer.rs  syntax_node.rs  transform_context.rs  transform_rule.rs
crates/texform-core/tests/support/: mod.rs  parser.rs
crates/texform-core/tests/unit/: knowledge.rs
crates/texform-interface/: Cargo.toml  README.md
crates/texform-interface/src/: column.rs  lib.rs  syntax_node.rs
crates/texform-interface/tests/: column_spec.rs
crates/texform-knowledge/: Cargo.toml  README.md  build.rs
crates/texform-knowledge-macros/: Cargo.toml  README.md
crates/texform-knowledge-macros/src/: lib.rs
crates/texform-knowledge/resources/specs/: ams.yaml  base.yaml  bboldx.yaml  boldsymbol.yaml  braket.yaml  physics.yaml  textmacros.yaml
crates/texform-knowledge/src/: lib.rs  specs.rs
crates/texform-knowledge/src/builtin/: mod.rs
crates/texform-knowledge/tests/: argspec_macro.rs  argspec_macro_ui.rs  specs.rs
crates/texform-knowledge/tests/ui/: argspec-invalid.rs  argspec-invalid.stderr  argspec-ok.rs
crates/texform-python/: Cargo.toml  README.md  pyproject.toml
crates/texform-python/src/: lib.rs
crates/texform-regression/: Cargo.toml  README.md
crates/texform-regression/src/: config.rs  data.rs  dump.rs  lib.rs  output.rs  runner.rs  stats.rs  transform_contract.rs
crates/texform-specs/: .gitignore  Cargo.toml  build.rs
crates/texform-specs/codegen/: command_symbol_facades.rs
crates/texform-specs/src/: argspec.rs  core_knowledge.rs  lib.rs  specs.rs  specs_yaml.rs
crates/texform-specs/src/builtin/: mod.rs
crates/texform-specs/tests/: argspec_macro.rs  argspec_macro_ui.rs  specs.rs  value_kind_column.rs
crates/texform-specs/tests/ui/: argspec-invalid.rs  argspec-invalid.stderr  argspec-ok.rs
crates/texform-transform/: Cargo.toml  README.md  build.rs
crates/texform-transform/src/: config.rs  context.rs  engine.rs  error.rs  lib.rs  report.rs
crates/texform-transform/src/finalize_ast/: mod.rs
crates/texform-transform/src/flatten_groups/: mod.rs
crates/texform-transform/src/lower_attributes/: codegen.rs  data.yaml  mod.rs
crates/texform-transform/src/rewrite/: class_set.rs  contract.rs  helpers.rs  level_set.rs  macro_support.rs  macros.rs  mod.rs  plan.rs  registry.rs  rule.rs  rule_context.rs  scheduler.rs
crates/texform-transform/src/rewrite/rules/: README.md  generated.rs  mod.rs
crates/texform-transform/tests/: config_model.rs  finalize_ast.rs  flatten_groups.rs  lower_attributes.rs  rewrite_context.rs  rewrite_rule.rs  transform_contract.rs
crates/texform-wasm/: Cargo.toml  README.md
crates/texform-wasm/src/: lib.rs
crates/texform/src/: analysis.rs  argspec.rs  bindings.rs  config.rs  document.rs  engine.rs  error.rs  knowledge.rs  lib.rs  parse_result.rs  parser.rs  serialize.rs  transform_engine.rs
crates/texform/tests/: analysis.rs  argspec.rs  binding_contract.rs  config.rs  document.rs  engine.rs  parse_states.rs  parser.rs  probing.rs  serialize.rs  transform_engine.rs  transform_gating.rs
(+590 files in other folders)
