[workspace]
members = [
  "crates/texform-argspec",
  "crates/texform-argspec-macros",
  "crates/texform-bench",
  "crates/texform-core",
  "crates/texform-interface",
  "crates/texform-python",
  "crates/texform-specs",
  "crates/texform-wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chumsky = "0.11.1"
logos = "0.15.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
slotmap = "1.0.7"
ariadne = "0.5"
serde_json = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
trybuild = "1.0"

pyo3 = "0.27"
pythonize = "0.27"
js-sys = "0.3"
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

texform-argspec = { path = "crates/texform-argspec" }
texform-argspec-macros = { path = "crates/texform-argspec-macros" }
texform-core = { path = "crates/texform-core" }
texform-interface = { path = "crates/texform-interface" }
texform-specs = { path = "crates/texform-specs" }
