[package]
name = "texform-argspec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "xparse-style argument specification parser for TeXForm (internal; use the texform crate)"
repository.workspace = true
homepage.workspace = true

[dependencies]
texform-interface.workspace = true
