[package]
name = "texform-bench"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
name = "parse_corpus"
harness = false

[dependencies]
texform-core.workspace = true
texform-interface.workspace = true
texform-specs.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
parquet = { version = "58.1.0", features = ["arrow", "zstd"] }
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
rayon = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "texform-counter-dump"
path = "src/bin/dump_counters.rs"
