[package]
name = "texform-core"
version.workspace = true
edition.workspace = true

[dependencies]
ariadne.workspace = true
chumsky.workspace = true
logos.workspace = true
serde.workspace = true
serde_yaml.workspace = true
slotmap.workspace = true

texform-interface.workspace = true
texform-specs.workspace = true

