[package]
name = "texform-core"
version.workspace = true
edition.workspace = true

[dependencies]
ariadne.workspace = true
chumsky.workspace = true
logos.workspace = true
serde.workspace = true
serde_yaml.workspace = true
slotmap.workspace = true
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

texform-interface.workspace = true
texform-argspec.workspace = true
texform-specs.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
tsify = ["dep:tsify-next", "dep:wasm-bindgen", "texform-interface/tsify"]
