[package]
name = "texform-interface"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dependency-free shared types for TeXForm (internal; use the texform crate)"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
tsify = ["dep:tsify-next", "dep:wasm-bindgen"]

[dev-dependencies]
serde_json.workspace = true
