[package]
name = "texform-knowledge-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for the TeXForm knowledge base (internal; use the texform crate)"
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
texform-argspec.workspace = true
