[package]
name = "texform-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true

texform-argspec.workspace = true
texform-interface.workspace = true
texform-knowledge-macros.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml.workspace = true
texform-argspec.workspace = true

[dev-dependencies]
trybuild.workspace = true
