[package]
name = "texform-python"
version.workspace = true
edition.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
pythonize.workspace = true
serde_json.workspace = true
texform-core.workspace = true
texform-transform.workspace = true
