[package]
name = "texform-regression"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
texform-core.workspace = true
texform.workspace = true
texform-interface.workspace = true
texform-knowledge.workspace = true
texform-transform.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
parquet = { version = "58.1.0", features = ["arrow", "zstd"] }
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
rayon = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "parser_regression"
path = "src/bin/parser_regression.rs"

[[bin]]
name = "counter_dump"
path = "src/bin/dump_counters.rs"

[[bin]]
name = "transform_contract"
path = "src/bin/transform_contract.rs"
