[package]
name = "texform-specs"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true

texform-argspec.workspace = true
texform-interface.workspace = true
texform-specs-macros.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml.workspace = true
texform-argspec.workspace = true

[dev-dependencies]
trybuild.workspace = true
