[package]
name = "texform-transform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Profile-based AST transform engine for TeXForm (internal; use the texform crate)"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
texform-core.workspace = true
texform-interface.workspace = true
texform-knowledge.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml.workspace = true
texform-knowledge.workspace = true
