[package]
name = "texform-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
texform-argspec.workspace = true
texform-core = { workspace = true, features = ["tsify"] }
texform-specs = { workspace = true }
texform-transform.workspace = true
tsify-next.workspace = true
