[package]
name = "texform-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for TeXForm, published to npm via wasm-pack"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
texform.workspace = true
texform-argspec.workspace = true
texform-core = { workspace = true, features = ["tsify"] }
tsify-next.workspace = true
