[package]
name = "texform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LaTeX formula parser, editor, and normalizer — the public TeXForm facade"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
texform-argspec.workspace = true
texform-core.workspace = true
texform-interface.workspace = true
texform-transform.workspace = true
